remove height constraint causing overflow bug

--- a/frontend/components/top_nav/SiteTopNav/_styles.scss
+++ b/frontend/components/top_nav/SiteTopNav/_styles.scss
@@ -1,5 +1,4 @@
 .site-nav-content {
-  height: 50px;
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
@@ -12,7 +11,6 @@
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: row;
 }
 
 .site-nav-item {
@@ -91,7 +89,7 @@
     &:hover {
       background-color: $site-nav-on-hover;
     }
-    
+
     .site-nav-item__link {
       padding-bottom: 12px;
     }
